feat(java/kotlin): add binary-search-tree and binary-tree implementations
Four new packages providing general-purpose tree data structures in Java
and Kotlin:

java/binary-search-tree (41 tests):
- Mutable BST<T extends Comparable<T>> with size-augmented nodes
- insert, delete (successor-based for two-child nodes), search, contains
- minValue/maxValue, predecessor/successor — O(log n) iterative
- kthSmallest(k), rank(x) — O(log n) via size augmentation
- fromSortedList() — O(n) balanced BST from sorted list
- isValid() uses -2 sentinel (not -1) so empty tree passes validation

kotlin/binary-search-tree (41 tests):
- class BinarySearchTree<T : Comparable<T>> — idiomatic Kotlin mutable BST
- val size / val isEmpty — O(1) Kotlin properties via cached root.size
- minValue()/maxValue() return T? (null for empty tree, not Optional)
- companion object fromSortedList factory

java/binary-tree (42 tests):
- Generic BinaryTree<T> with public static BinaryTreeNode<T> inner class
- fromLevelOrder(List<T>) — constructs via heap-array index formula (2i+1, 2i+2)
- isFull/isComplete/isPerfect shape predicates
- isComplete uses LinkedList (not ArrayDeque) for null-sentinel BFS
- inorder/preorder/postorder/levelOrder traversals
- toArray(), toAscii() with box-drawing connectors

kotlin/binary-tree (42 tests):
- class BinaryTree<T> with public inner class Node
- Same null-sentinel BFS isComplete() using LinkedList
- companion object fromLevelOrder factory accepting List<T?>
- val size / val isEmpty Kotlin properties

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>