@@ -1,5 +1,6 @@
 package com.codingadventures.binarytree;
 
+import com.codingadventures.binarytree.BinaryTree.BinaryTreeNode;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
@@ -8,96 +9,363 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 class BinaryTreeTest {
-    @Test
-    void buildsFromLevelOrderAndProjectsBackToArray() {
-        BinaryTree<Integer> tree = BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6, 7));
 
-        assertEquals(List.of(1, 2, 3, 4, 5, 6, 7), tree.toArray());
-        assertEquals(List.of(1, 2, 3, 4, 5, 6, 7), tree.levelOrder());
-        assertEquals(7, tree.size());
-        assertEquals(2, tree.height());
+    // -------------------------------------------------------------------------
+    // Helpers
+    // -------------------------------------------------------------------------
+
+    /**
+     * Build the tree used in most tests:
+     *
+     *        1
+     *       / \
+     *      2   3
+     *     / \   \
+     *    4   5   6
+     */
+    private BinaryTree<Integer> sample() {
+        return BinaryTree.fromLevelOrder(Arrays.asList(1, 2, 3, 4, 5, null, 6));
+    }
+
+    /**
+     * Perfect tree of height 2:
+     *         1
+     *        / \
+     *       2   3
+     *      / \ / \
+     *     4  5 6  7
+     */
+    private BinaryTree<Integer> perfect() {
+        return BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6, 7));
+    }
+
+    // -------------------------------------------------------------------------
+    // Construction
+    // -------------------------------------------------------------------------
+
+    @Test
+    void emptyTreeHasSizeZeroAndHeightMinusOne() {
+        BinaryTree<Integer> t = new BinaryTree<>();
+        assertEquals(0, t.size());
+        assertEquals(-1, t.height());
+        assertTrue(t.isEmpty());
     }
 
     @Test
-    void shapeQueriesDistinguishFullCompleteAndPerfectTrees() {
-        BinaryTree<Integer> perfect = BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6, 7));
-        assertTrue(perfect.isFull());
-        assertTrue(perfect.isComplete());
-        assertTrue(perfect.isPerfect());
-
-        BinaryTree<Integer> complete = BinaryTree.fromLevelOrder(Arrays.asList(1, 2, 3, 4, null, null, null));
-        assertFalse(complete.isFull());
-        assertTrue(complete.isComplete());
-        assertFalse(complete.isPerfect());
-
-        BinaryTree<Integer> incomplete = BinaryTree.fromLevelOrder(Arrays.asList(1, null, 3));
-        assertFalse(incomplete.isComplete());
+    void singleNodeTree() {
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(List.of(42));
+        assertEquals(1, t.size());
+        assertEquals(0, t.height());
+        assertFalse(t.isEmpty());
+        assertEquals(42, t.root.value);
     }
 
     @Test
-    void traversalsAndChildLookupMatchReferenceOrder() {
-        BinaryTree<Integer> tree = BinaryTree.fromLevelOrder(Arrays.asList(1, 2, 3, 4, null, 5, null));
-
-        assertEquals(List.of(4, 2, 1, 5, 3), tree.inorder());
-        assertEquals(List.of(1, 2, 4, 3, 5), tree.preorder());
-        assertEquals(List.of(4, 2, 5, 3, 1), tree.postorder());
-        assertEquals(List.of(1, 2, 3, 4, 5), tree.levelOrder());
-        assertEquals(2, tree.leftChild(1).value());
-        assertEquals(3, tree.rightChild(1).value());
-        assertNull(tree.find(99));
+    void fromLevelOrderBuildsCorrectTree() {
+        BinaryTree<Integer> t = sample();
+        assertEquals(6, t.size());
+        assertEquals(2, t.height());
+        assertEquals(1, t.root.value);
+        assertEquals(2, t.root.left.value);
+        assertEquals(3, t.root.right.value);
+        assertNull(t.root.right.left);
+        assertEquals(6, t.root.right.right.value);
     }
 
     @Test
-    void emptyAndSingletonTreesExposeEdgeCases() {
-        BinaryTree<String> empty = BinaryTree.empty();
-        assertNull(empty.root());
-        assertEquals(-1, empty.height());
-        assertEquals(0, empty.size());
-        assertTrue(empty.isFull());
-        assertTrue(empty.isComplete());
-        assertTrue(empty.isPerfect());
-        assertEquals(List.of(), empty.inorder());
-        assertEquals(List.of(), empty.toArray());
-        assertEquals("", empty.toAscii());
-        assertEquals("BinaryTree(root=null, size=0)", empty.toString());
-
-        BinaryTree<String> single = BinaryTree.singleton("root");
-        assertEquals("root", single.root().value());
-        assertEquals(List.of("root"), single.toArray());
-        assertEquals("BinaryTree(root=root, size=1)", single.toString());
+    void fromLevelOrderNullValuesCreateAbsentNodes() {
+        // [1, null, 3] → root=1, no left child, right child=3
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(Arrays.asList(1, null, 3));
+        assertNull(t.root.left);
+        assertEquals(3, t.root.right.value);
     }
 
     @Test
-    void asciiRenderingContainsValues() {
-        BinaryTree<String> tree = BinaryTree.fromLevelOrder(List.of("root", "left", "right"));
-        String ascii = tree.toAscii();
-
-        assertTrue(ascii.contains("root"));
-        assertTrue(ascii.contains("left"));
-        assertTrue(ascii.contains("right"));
-        assertTrue(ascii.contains("`--"));
+    void fromLevelOrderEmptyListReturnsEmptyTree() {
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(List.<Integer>of());
+        assertTrue(t.isEmpty());
     }
 
     @Test
-    void staticHelpersSupportRawRootComposition() {
-        BinaryTreeNode<Integer> root = new BinaryTreeNode<>(
-                1,
-                new BinaryTreeNode<>(2),
-                new BinaryTreeNode<>(3));
+    void constructorWithRootValue() {
+        BinaryTree<String> t = new BinaryTree<>("hello");
+        assertEquals("hello", t.root.value);
+        assertEquals(1, t.size());
+    }
 
-        assertSame(root, BinaryTree.withRoot(root).root());
-        assertEquals(2, BinaryTree.leftChild(root, 1).value());
-        assertEquals(3, BinaryTree.rightChild(root, 1).value());
-        assertEquals(List.of(2, 1, 3), BinaryTree.inorder(root));
-        assertEquals(List.of(1, 2, 3), BinaryTree.preorder(root));
-        assertEquals(List.of(2, 3, 1), BinaryTree.postorder(root));
-        assertEquals(List.of(1, 2, 3), BinaryTree.levelOrder(root));
-        assertEquals(Arrays.asList(1, 2, 3), BinaryTree.toArray(root));
-        assertTrue(BinaryTree.isFull(root));
-        assertTrue(BinaryTree.isComplete(root));
-        assertTrue(BinaryTree.isPerfect(root));
-        assertEquals(1, BinaryTree.height(root));
-        assertEquals(3, BinaryTree.size(root));
-        assertTrue(BinaryTree.toAscii(root).contains("1"));
+    // -------------------------------------------------------------------------
+    // find / leftChild / rightChild
+    // -------------------------------------------------------------------------
+
+    @Test
+    void findLocatesExistingNode() {
+        BinaryTree<Integer> t = sample();
+        BinaryTreeNode<Integer> node = t.find(4);
+        assertNotNull(node);
+        assertEquals(4, node.value);
+    }
+
+    @Test
+    void findReturnsNullForAbsentValue() {
+        assertNull(sample().find(99));
+    }
+
+    @Test
+    void findReturnsNullForEmptyTree() {
+        assertNull(new BinaryTree<Integer>().find(1));
+    }
+
+    @Test
+    void leftChildReturnsCorrectChild() {
+        BinaryTree<Integer> t = sample();
+        assertEquals(4, t.leftChild(2).value);
+        assertNull(t.leftChild(4));   // leaf has no left child
+    }
+
+    @Test
+    void rightChildReturnsCorrectChild() {
+        BinaryTree<Integer> t = sample();
+        assertEquals(5, t.rightChild(2).value);
+        assertEquals(6, t.rightChild(3).value);
+    }
+
+    @Test
+    void leftChildOfAbsentValueReturnsNull() {
+        assertNull(sample().leftChild(99));
+    }
+
+    // -------------------------------------------------------------------------
+    // Shape predicates: isFull
+    // -------------------------------------------------------------------------
+
+    @Test
+    void isFullReturnsTrueForFullTree() {
+        // Full tree: every node has 0 or 2 children
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6, 7));
+        assertTrue(t.isFull());
+    }
+
+    @Test
+    void isFullReturnsFalseWhenNodeHasOneChild() {
+        assertFalse(sample().isFull());  // node 3 has only right child
+    }
+
+    @Test
+    void isFullReturnsTrueForSingleNode() {
+        assertTrue(new BinaryTree<>(1).isFull());
+    }
+
+    @Test
+    void isFullReturnsTrueForEmptyTree() {
+        assertTrue(new BinaryTree<Integer>().isFull());
+    }
+
+    @Test
+    void isFullReturnsTrueForNodeWithBothChildren() {
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(List.of(1, 2, 3));
+        assertTrue(t.isFull());
+    }
+
+    // -------------------------------------------------------------------------
+    // Shape predicates: isComplete
+    // -------------------------------------------------------------------------
+
+    @Test
+    void isCompleteReturnsTrueForCompleteTree() {
+        // Level-order [1,2,3,4,5,6] → all levels filled except rightmost of last
+        BinaryTree<Integer> t = BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6));
+        assertTrue(t.isComplete());
+    }
+
+    @Test
+    void isCompleteReturnsFalseForNonCompleteTree() {
+        // Node at index 5 is null but index 6 has a node → not left-to-right filled
+        assertFalse(sample().isComplete());
+    }
+
+    @Test
+    void isCompleteReturnsTrueForSingleNode() {
+        assertTrue(new BinaryTree<>(1).isComplete());
+    }
+
+    @Test
+    void isCompleteReturnsTrueForEmptyTree() {
+        assertTrue(new BinaryTree<Integer>().isComplete());
+    }
+
+    @Test
+    void isCompleteReturnsTrueForPerfectTree() {
+        assertTrue(perfect().isComplete());
+    }
+
+    // -------------------------------------------------------------------------
+    // Shape predicates: isPerfect
+    // -------------------------------------------------------------------------
+
+    @Test
+    void isPerfectReturnsTrueForPerfectTree() {
+        assertTrue(perfect().isPerfect());
+    }
+
+    @Test
+    void isPerfectReturnsFalseForImperfectTree() {
+        assertFalse(sample().isPerfect());
+        assertFalse(BinaryTree.fromLevelOrder(List.of(1, 2, 3, 4, 5, 6)).isPerfect());
+    }
+
+    @Test
+    void isPerfectReturnsTrueForSingleNode() {
+        assertTrue(new BinaryTree<>(1).isPerfect());
+    }
+
+    @Test
+    void isPerfectReturnsTrueForEmptyTree() {
+        assertTrue(new BinaryTree<Integer>().isPerfect());
+    }
+
+    // -------------------------------------------------------------------------
+    // Traversals
+    // -------------------------------------------------------------------------
+
+    @Test
+    void inorderTraversalCorrect() {
+        assertEquals(List.of(4, 2, 5, 1, 3, 6), sample().inorder());
+    }
+
+    @Test
+    void preorderTraversalCorrect() {
+        assertEquals(List.of(1, 2, 4, 5, 3, 6), sample().preorder());
+    }
+
+    @Test
+    void postorderTraversalCorrect() {
+        assertEquals(List.of(4, 5, 2, 6, 3, 1), sample().postorder());
+    }
+
+    @Test
+    void levelOrderTraversalCorrect() {
+        assertEquals(List.of(1, 2, 3, 4, 5, 6), sample().levelOrder());
+    }
+
+    @Test
+    void traversalsOnEmptyTreeReturnEmptyList() {
+        BinaryTree<Integer> t = new BinaryTree<>();
+        assertTrue(t.inorder().isEmpty());
+        assertTrue(t.preorder().isEmpty());
+        assertTrue(t.postorder().isEmpty());
+        assertTrue(t.levelOrder().isEmpty());
+    }
+
+    @Test
+    void traversalsOnSingleNode() {
+        BinaryTree<Integer> t = new BinaryTree<>(42);
+        assertEquals(List.of(42), t.inorder());
+        assertEquals(List.of(42), t.preorder());
+        assertEquals(List.of(42), t.postorder());
+        assertEquals(List.of(42), t.levelOrder());
+    }
+
+    // -------------------------------------------------------------------------
+    // toArray
+    // -------------------------------------------------------------------------
+
+    @Test
+    void toArrayProducesLevelOrderWithNulls() {
+        // sample: [1, 2, 3, 4, 5, null, 6]
+        List<Integer> arr = sample().toArray();
+        assertEquals(7, arr.size());   // 2^3 - 1 = 7
+        assertEquals(1,    arr.get(0));
+        assertEquals(2,    arr.get(1));
+        assertEquals(3,    arr.get(2));
+        assertEquals(4,    arr.get(3));
+        assertEquals(5,    arr.get(4));
+        assertNull(         arr.get(5));
+        assertEquals(6,    arr.get(6));
+    }
+
+    @Test
+    void toArrayOnEmptyTreeReturnsEmptyList() {
+        assertTrue(new BinaryTree<Integer>().toArray().isEmpty());
+    }
+
+    // -------------------------------------------------------------------------
+    // toAscii
+    // -------------------------------------------------------------------------
+
+    @Test
+    void toAsciiOnEmptyTreeReturnsEmptyString() {
+        assertEquals("", new BinaryTree<Integer>().toAscii());
+    }
+
+    @Test
+    void toAsciiOnSingleNodeReturnsRootLine() {
+        String ascii = new BinaryTree<>(42).toAscii();
+        assertTrue(ascii.contains("42"), "Expected '42' in: " + ascii);
+    }
+
+    @Test
+    void toAsciiContainsAllValues() {
+        String ascii = sample().toAscii();
+        for (int v : new int[]{1, 2, 3, 4, 5, 6}) {
+            assertTrue(ascii.contains(String.valueOf(v)),
+                "Expected '" + v + "' in ASCII output:\n" + ascii);
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    // height / size
+    // -------------------------------------------------------------------------
+
+    @Test
+    void heightForVariousTrees() {
+        assertEquals(-1, new BinaryTree<Integer>().height());
+        assertEquals( 0, new BinaryTree<>(1).height());
+        assertEquals( 2, sample().height());
+        assertEquals( 2, perfect().height());
+    }
+
+    @Test
+    void sizeForVariousTrees() {
+        assertEquals(0, new BinaryTree<Integer>().size());
+        assertEquals(1, new BinaryTree<>(1).size());
+        assertEquals(6, sample().size());
+        assertEquals(7, perfect().size());
+    }
+
+    // -------------------------------------------------------------------------
+    // toString
+    // -------------------------------------------------------------------------
+
+    @Test
+    void toStringShowsRootAndSize() {
+        assertEquals("BinaryTree(root=null, size=0)", new BinaryTree<Integer>().toString());
+        assertEquals("BinaryTree(root=1, size=6)", sample().toString());
+    }
+
+    // -------------------------------------------------------------------------
+    // String values
+    // -------------------------------------------------------------------------
+
+    @Test
+    void worksWithStringValues() {
+        BinaryTree<String> t = BinaryTree.fromLevelOrder(
+            Arrays.asList("root", "left", "right", null, "leaf", null, null));
+        assertEquals(List.of("root", "left", "right", "leaf"), t.levelOrder());
+        assertNotNull(t.find("leaf"));
+    }
+
+    // -------------------------------------------------------------------------
+    // Manual tree construction
+    // -------------------------------------------------------------------------
+
+    @Test
+    void manualTreeConstruction() {
+        BinaryTreeNode<Integer> root = new BinaryTreeNode<>(10);
+        root.left = new BinaryTreeNode<>(5);
+        root.right = new BinaryTreeNode<>(15);
+        BinaryTree<Integer> t = new BinaryTree<>(root);
+        assertEquals(List.of(5, 10, 15), t.inorder());
+        assertTrue(t.isFull());
+        assertTrue(t.isComplete());
     }
 }
